<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dnd_main"
    tools:context=".CurrentRichesActivity">

    <TextView
        android:id="@+id/tvCurrentRiches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/currentRiches"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentRichesId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentRiches"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCurrentRichesTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentRichesId"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/lineButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentRichesTitle"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/buttEditRiches"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttDeleteRiches"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/delete" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollForRichesData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineButtons"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/layoutRichesForData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTrinkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/trinkets"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutTrinketsForData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTrinkets"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/tvPrecious_stones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutTrinketsForData"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/precious_stones"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutPrecious_stonesForData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPrecious_stones"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/tvCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutPrecious_stonesForData"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/coins"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutCoinsForData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCoins"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:id="@+id/tvArtworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutCoinsForData"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/artworks"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutArtworksForData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvArtworks"
                android:orientation="vertical">

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>