<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dnd_main"
    tools:context=".AddRichesActivity">

    <TextView
        android:id="@+id/tvCurrentRiches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/createRiches"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollForCreateRiches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrentRiches"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/layoutForCreateRiches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvChooseTrinkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/chooseTrinkets"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lineChooseTrinkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChooseTrinkets">

                <Spinner
                    android:id="@+id/trinketsSpinner"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/addTrinkets"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add"/>
            </LinearLayout>

            <Button
                android:id="@+id/addNewTrinkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineChooseTrinkets"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/addNewTrinkets" />

            <TextView
                android:id="@+id/tvChooseArtworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewTrinkets"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/chooseArtworks"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lineChooseArtworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChooseArtworks"
                android:layout_centerHorizontal="true">

                <Spinner
                    android:id="@+id/artworksSpinner"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/addArtworks"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add"/>
            </LinearLayout>

            <Button
                android:id="@+id/addNewArtworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineChooseArtworks"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/addNewArtworks" />

            <TextView
                android:id="@+id/tvChooseCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewArtworks"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/chooseCoins"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lineChooseCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChooseCoins"
                android:layout_centerHorizontal="true">

                <Spinner
                    android:id="@+id/coinsSpinner"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/addCoins"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add"/>
            </LinearLayout>

            <Button
                android:id="@+id/addNewCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineChooseCoins"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/addNewCoins" />

            <TextView
                android:id="@+id/tvChoosePrecious_stones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewCoins"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/choosePrecious_stones"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lineChoosePrecious_stones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvChoosePrecious_stones"
                android:layout_centerHorizontal="true">

                <Spinner
                    android:id="@+id/precious_stonesSpinner"
                    android:layout_width="250dp"
                    android:layout_height="45dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/addPrecious_stones"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/add"/>
            </LinearLayout>

            <Button
                android:id="@+id/addNewPrecious_stones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineChoosePrecious_stones"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/addNewPrecious_stones" />

            <TextView
                android:id="@+id/tvYourRiches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/addNewPrecious_stones"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/yourRiches"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tvYourRiches"
                android:hint="@string/title"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/lineCurrentPrecious_stones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edTitle"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineCurrentCoins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineCurrentPrecious_stones"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineCurrentTrinkets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineCurrentCoins"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lineCurrentArtworks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineCurrentTrinkets"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/createNewRiches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineCurrentArtworks"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/createNewRiches" />


        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/layoutTmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scrollForCreateRiches">

    </RelativeLayout>

</RelativeLayout>